--- a/404.html
+++ b/404.html
@@ -4,12 +4,12 @@
     <meta charset='utf-8'>
     <title>My new project!</title>
     <link rel='preload' href='https://fonts.googleapis.com/css?family=Raleway:400,200&display=swap' as='style'>
-    <link rel='preload' href='style.css' as='style'>
-    <link rel="preload" href='script.js' as="script">
+    <link rel='preload' href='/style.css' as='style'>
+    <link rel="preload" href='/script.js' as="script">
 
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:400,200&display=swap'>
-    <link rel='stylesheet' type='text/css' href='style.css'>
-    <script src='script.js' defer></script>
+    <link rel='stylesheet' type='text/css' href='/style.css'>
+    <script src='/script.js' defer></script>
   </head>
   <body>
     <h1>404 - not found!</h1>
