--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
     <meta charset='utf-8'>
     <title>Homepage</title>
     <link rel='preload' href='https://fonts.googleapis.com/css?family=Raleway:400,200&display=swap' as='style'>
-    <link rel='preload' href='style.css' as='style'>
-    <link rel='preload' href='theme.css' as='style'>
-    <link rel="preload" href='script.js' as="script">
+    <link rel='preload' href='/style.css' as='style'>
+    <link rel='preload' href='/theme.css' as='style'>
+    <link rel="preload" href='/script.js' as="script">
     <meta name="viewport" content="width=device-width, initial-scale=0.6, shrink-to-fit=no">
 
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:400,200&display=swap'>
-    <link rel='stylesheet' type='text/css' href='style.css'>
-    <link rel='stylesheet' type='text/css' href='theme.css'>
-    <script src='script.js' defer></script>
+    <link rel='stylesheet' type='text/css' href='/style.css'>
+    <link rel='stylesheet' type='text/css' href='/theme.css'>
+    <script src='/script.js' defer></script>
   </head>
   <body class="loading">
     <nav class="nav">
